# Westward

./: .gitignore  JsonExamples.txt  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  docs.yml  native.yml
gradle/wrapper/: gradle-wrapper.properties
installer/: Cargo.toml
installer/output/: icon.icns
launcher/: Cargo.toml
launcher/src/: main.rs
src/main/java/io/github/onu_eccs1621_sp2025/westward/: TrailApplication.java
src/main/java/io/github/onu_eccs1621_sp2025/westward/data/: Audio.java  DataPaths.java  Date.java  Landmark.java  SaveData.java  ShopListing.java  StatusContainer.java
src/main/java/io/github/onu_eccs1621_sp2025/westward/data/loot_table/: LootTable.java  LootTableEntry.java
src/main/java/io/github/onu_eccs1621_sp2025/westward/game/: Game.java  Inventory.java  ItemStack.java
src/main/java/io/github/onu_eccs1621_sp2025/westward/screen/: Dashboard.java  InventoryViewer.java  Renderer.java  Screen.java
src/main/java/io/github/onu_eccs1621_sp2025/westward/utils/: Config.java  DebugLogger.java  ListUtils.java  NativeUtils.java  RecordUtils.java  ShallowClone.java  StartOnFirstThreadHelper.java  WeatherHelper.java  WebUtils.java
src/main/resources/defaultData/: config.json  events.json  items.json  landmarks.json  roles.json  statuses.json
src/main/resources/defaultData/lang/: en.json  es.json  fr.json
src/main/resources/defaultData/screens/: huntingGameScreens.json  landmarkScreens.json  perilScreens.json  shopScreens.json  tradingScreens.json
(+34 files in other folders)
