[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1.0.27"
reqwest = { version = "0.12.26", features = ["blocking", "json", "stream"] }
eframe = "0.33.3"
serde = "1.0.228"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = "1.48.0"
futures-util = "0.3.31"